--- a/.github/workflows/semantic-release-config-mvn.json
+++ b/.github/workflows/semantic-release-config-mvn.json
@@ -1,6 +1,11 @@
 {
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "releaseRules": [{ "type": "chore", "release": "patch" }]
+      }
+    ],
     [
       "@semantic-release/release-notes-generator",
       {
