--- a/pages/config.toml
+++ b/pages/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://erzz.github.io/workflows/"
+baseURL = "https://erzz.github.io/workflows"
 title = "erzz/workflows"
 enableRobotsTXT = true
 # this example loads the theme as hugo module
