--- a/pages/config.toml
+++ b/pages/config.toml
@@ -1,12 +1,18 @@
 baseURL = "https://erzz.github.io/workflows"
 title = "erzz/workflows"
 enableRobotsTXT = true
+
 # this example loads the theme as hugo module
 # comment out line below, and uncomment the line after it if you prefer to load the theme normally
 theme = ["github.com/onweru/compose"]
+#theme = "compose"
+
 enableGitInfo = true
 
 disableKinds = ["taxonomy", "taxonomyTerm"]
+
+RelativeURLs=true
+CanonifyURLs=true
 
 [outputs]
   home = ["HTML", "RSS","JSON"]
