--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -59,13 +59,13 @@ jobs:
         if: ${{ inputs.default-config }}
         run: |
           echo "Fetching default configuration from erzz/workflows..."
-          curl -L -o .releaserc.json https://raw.githubusercontent.com/erzz/workflows/main/.github/workflows/configs/semantic-release-config.json || exit 1
+          curl -L --fail -o .releaserc.json https://raw.githubusercontent.com/erzz/workflows/main/.github/workflows/configs/semantic-release-config.json || exit 1
 
       - name: Get MVN Configuration
         if: ${{ inputs.mvn-settings }}
         run: |
           echo "Fetching Maven configuration from erzz/workflows..."
-          curl -L -o .releaserc.json https://raw.githubusercontent.com/erzz/workflows/main/.github/workflows/configs/semantic-release-config-mvn.json || exit 1
+          curl -L --fail -o .releaserc.json https://raw.githubusercontent.com/erzz/workflows/main/.github/workflows/configs/semantic-release-config-mvn.json || exit 1
 
       - name: Semantic Release
         id: semantic-release
