fix(unit-tests): fix broken images in jacoco report

--- a/.github/workflows/java-tests.yml
+++ b/.github/workflows/java-tests.yml
@@ -246,5 +246,5 @@ jobs:
         with:
           name: Unit Test Reports
           path: |
-            **/target/jacoco/reports/index.html
+            **/target/jacoco/reports/
             **/target/surefire-reports/TEST-*.xml
