--- a/.github/workflows/java-tests.yml
+++ b/.github/workflows/java-tests.yml
@@ -129,7 +129,7 @@ jobs:
         if: ${{ inputs.cc-default-config }}
         run: |
           echo "Fetching default configuration from erzz/workflows..."
-          curl -L --fail -o .codeclimate.yml https://raw.githubusercontent.com/erzz/workflows/java-tests/.github/workflows/configs/.java-codeclimate.yml || exit 1
+          curl -L --fail -o .codeclimate.yml https://raw.githubusercontent.com/erzz/workflows/main/.github/workflows/configs/.java-codeclimate.yml || exit 1
 
       - name: Code Climate Standalone
         uses: erzz/codeclimate-standalone@v0.0.3
@@ -179,10 +179,15 @@ jobs:
           PROJECT_NAME: ${{ inputs.polaris-project-name }}
           SEM_VER_REGEX: "^v[0-9]+\\.[0-9]+\\.[0-9]+$"
         run: |
+          # Fetch the result analzer script
+          echo "Fetching Polaris Result Analyzer from erzz/workflows..."
+          curl -L --fail -o polaris-result-analyzer.py https://raw.githubusercontent.com/erzz/workflows/main/.github/workflows/utils/polaris-result-analyzer.py || exit 1
+
           # skip if running as part of a release commit
           if (echo ${{ env.GITHUB_REF_SLUG }} | grep -Eq ${{ env.SEM_VER_REGEX }}); then
             echo "Skipping this job as it was triggered from a release commit" && exit 0
           fi
+
           # else install and execute
           wget -q "$POLARIS_URL/api/tools/polaris_cli-linux64.zip"
           unzip -j polaris_cli-linux64.zip -d /tmp
@@ -190,8 +195,9 @@ jobs:
           /tmp/polaris \
             -s $POLARIS_URL \
             analyze -w
+
           # Pass / Fail depending on the thresholds
-          python3 .github/polaris/polaris-result-analyzer.py --max-total=${{ inputs.polaris-total-threshold }} --max-critical=${{ inputs.polaris-critical-threshold }} --max-high=${{ inputs.polaris-high-threshold }} --max-medium=${{ inputs.polaris-medium-threshold }} --max-low=${{ inputs.polaris-low-threshold }}
+          python3 polaris-result-analyzer.py --max-total=${{ inputs.polaris-total-threshold }} --max-critical=${{ inputs.polaris-critical-threshold }} --max-high=${{ inputs.polaris-high-threshold }} --max-medium=${{ inputs.polaris-medium-threshold }} --max-low=${{ inputs.polaris-low-threshold }}
       
       - name: Upload scan reports
         if: always()
