--- a/.github/workflows/_project_docs.yml
+++ b/.github/workflows/_project_docs.yml
@@ -1,9 +1,9 @@
 name: Publish Docs
 
-on: push
-#  push:
-#    branches:
-#      - main
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
