--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -139,9 +139,12 @@ jobs:
     if: ${{ inputs.include-tests }}
     needs: build-image
     steps:
-      # Checkout required for upload step's git context
+      # Checkout required to make any ignore/config available
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Slugify github variables
+        uses: rlespinasse/github-slug-action@v4
 
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v0
@@ -165,6 +168,9 @@ jobs:
     steps:
       - name: Checkout Source
         uses: actions/checkout@v2
+
+      - name: Slugify github variables
+        uses: rlespinasse/github-slug-action@v4
 
       - name: Authenticate to GCP
         id: auth
